--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #3771ba; }
+  background: #9434f8; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #757070; }
+  background: #756a61; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #24eb65; }
+  background: #dee74c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #de3247; }
+  background: #5d49eb; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #95fc37; }
+  background: #345793; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e92475; }
+  background: #ceef30; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ba1a86; }
+  background: #8e0cb1; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #70e3fe; }
+  background: #c713df; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #1bf907; }
+  background: #9c0645; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fcf63b; }
+  background: #279c66; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #073d8e; }
+  background: #17f140; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #cc8ef9; }
+  background: #b36557; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #489a03; }
+  background: #215141; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5c5bbf; }
+  background: #19ba55; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #10d042; }
+  background: #27cffd; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #a5b38e; }
+  background: #df4b65; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5b25f3; }
+  background: #c3f220; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #865509; }
+  background: #bf60c8; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0470a4; }
+  background: #59a4ba; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #09e79b; }
+  background: #762ef5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #57ec1e; }
+  background: #376edc; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #af07e1; }
+  background: #41d449; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #79d11c; }
+  background: #68a904; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f9edb8; }
+  background: #31fec5; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #76f0f6; }
+  background: #3166a7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2df0c2; }
+  background: #dfe910; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7cf341; }
+  background: #1bf9bd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #15e2ed; }
+  background: #b4c2f3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f4232b; }
+  background: #9401ef; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5f61bd; }
+  background: #3f3a07; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d62ae9; }
+  background: #b903e7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #25b148; }
+  background: #c96b7e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e2cc77; }
+  background: #f5acc2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a390cb; }
+  background: #1bfe22; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d448f7; }
+  background: #2a2bd4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d2681a; }
+  background: #bfcb70; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f6347c; }
+  background: #479a9e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #d6f0b5; }
+  background: #bf1b29; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0d99f8; }
+  background: #b1ce07; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #10c6ab; }
+  background: #29a20b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3da474; }
+  background: #fa9c8f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #12def2; }
+  background: #dc2720; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1f1a7b; }
+  background: #c23ae9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #0f267b; }
+  background: #318612; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d6d50f; }
+  background: #8bce5b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b3ba11; }
+  background: #fd05ad; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3b9baf; }
+  background: #3d27cf; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a6b85a; }
+  background: #fba8ed; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b08c0b; }
+  background: #2b2226; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b540d9; }
+  background: #b34234; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f072e7; }
+  background: #bf37bf; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d58e3a; }
+  background: #d6cd47; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f70346; }
+  background: #1fa90e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9e800f; }
+  background: #61f562; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cbf641; }
+  background: #0d87af; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6cc956; }
+  background: #acde55; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0abe9f; }
+  background: #2b01a6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ba7dff; }
+  background: #f32124; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #84100c; }
+  background: #40b49e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2ee23a; }
+  background: #a88194; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #610c0a; }
+  background: #3be295; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e9ea89; }
+  background: #09f307; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8f6bd2; }
+  background: #a70c69; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3a38f9; }
+  background: #c75704; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7eb01c; }
+  background: #d61059; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9b112c; }
+  background: #3a71db; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b111be; }
+  background: #c84aa8; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #179190; }
+  background: #7cc208; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ee2faf; }
+  background: #b753a4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6a4384; }
+  background: #187d4b; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #35ca18; }
+  background: #a6935e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3a8e9b; }
+  background: #96d919; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #08769e; }
+  background: #56ae14; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #334498; }
+  background: #a65c46; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3b2b93; }
+  background: #b6fecf; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ed2f7d; }
+  background: #88d362; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #576954; }
+  background: #4e3d7c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9b30e9; }
+  background: #aac80f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #5fe117; }
+  background: #91d393; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #a2f33f; }
+  background: #ad07f5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d560df; }
+  background: #9cc8db; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2914fa; }
+  background: #205ea1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c8aa9a; }
+  background: #4d1654; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #757989; }
+  background: #622fd5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #01339d; }
+  background: #a056e0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9961dc; }
+  background: #b51bcf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #267d1e; }
+  background: #7faa2e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fd75b4; }
+  background: #adb3b6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #65f3c7; }
+  background: #9f35d1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c59229; }
+  background: #eed374; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #541a6f; }
+  background: #539fdf; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6f513b; }
+  background: #1fc4e6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bb2d93; }
+  background: #e6aa2d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1121a2; }
+  background: #6aaf8f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f6a0dc; }
+  background: #50451e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #afa979; }
+  background: #c5c43e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #72ace7; }
+  background: #c643c0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #cbbdda; }
+  background: #e9bdd0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0d168b; }
+  background: #72051a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1bd477; }
+  background: #d8c303; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10561,6 +10561,9 @@ input[type="checkbox"] {
 .block {
   display: block; }
 
+.tab-right-column-container input[type="text"] {
+  padding-left: 40px; }
+
 .intro {
   display: flex;
   justify-content: center;
@@ -11105,6 +11108,24 @@ input:checked + .sliders:before {
   height: 20px;
   margin: 0px 10px; }
 
+.field-large {
+  width: 360px !important; }
+
+.adapter-modal-field-row label {
+  display: block; }
+
+.no-file-chisen-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+
+.no-file-chisen-items .choose-file-modal {
+  width: 100%; }
+
+.role-to-txt {
+  font-size: 20px;
+  margin-top: 20px; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -11203,7 +11224,20 @@ input:checked + .sliders:before {
     margin-top: 15px; }
 
   .connectors-main-wrapper .inner-tab-right-section {
-    margin-top: 0px !important; } }
+    margin-top: 0px !important; }
+
+  .field-large {
+    width: 100% !important; }
+
+  .adapter-modal-bottom-row {
+    justify-content: inherit; }
+
+  .no-file-chisen-items {
+    flex-direction: column; }
+
+  .adapter-modal-field-row .region-checkbox,
+  .adapter-three-col .adapter-modal-role-row-middle {
+    padding: 0px !important; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
