--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -127,6 +127,24 @@
     .connectors-main-wrapper .inner-tab-right-section {
         margin-top: 0px !important;
     }
+
+    .field-large {
+        width: 100% !important;
+    }
+
+    .adapter-modal-bottom-row {
+        justify-content: inherit;
+    }
+
+    .no-file-chisen-items {
+        flex-direction: column;
+    }
+
+    .adapter-modal-field-row .region-checkbox,
+    .adapter-three-col .adapter-modal-role-row-middle {
+        padding: 0px !important;
+    }
+
 }
 
 /*767 screen end here*/
