Expand all click model fix css issues

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #9434f8; }
+  background: #984cc6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #756a61; }
+  background: #346828; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #dee74c; }
+  background: #7ebdd1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5d49eb; }
+  background: #aa2713; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #345793; }
+  background: #c925af; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #ceef30; }
+  background: #947d6d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8e0cb1; }
+  background: #a30aac; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c713df; }
+  background: #27803c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9c0645; }
+  background: #61b571; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #279c66; }
+  background: #ffe235; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #17f140; }
+  background: #0a5fb1; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b36557; }
+  background: #2c65e6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #215141; }
+  background: #c4692d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #19ba55; }
+  background: #743701; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #27cffd; }
+  background: #3434be; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #df4b65; }
+  background: #dbdaa3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c3f220; }
+  background: #484dbe; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #bf60c8; }
+  background: #256dca; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #59a4ba; }
+  background: #5399ea; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #762ef5; }
+  background: #e16d62; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #376edc; }
+  background: #249084; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #41d449; }
+  background: #1a4547; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #68a904; }
+  background: #ad4e26; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #31fec5; }
+  background: #150a92; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3166a7; }
+  background: #27fa51; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #dfe910; }
+  background: #b1ae0c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1bf9bd; }
+  background: #5d9733; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b4c2f3; }
+  background: #1dade7; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9401ef; }
+  background: #4cf6da; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3f3a07; }
+  background: #7d0aa7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b903e7; }
+  background: #e7c73e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c96b7e; }
+  background: #318ae8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f5acc2; }
+  background: #7ef545; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1bfe22; }
+  background: #e71d21; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2a2bd4; }
+  background: #f850a5; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bfcb70; }
+  background: #a9807c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #479a9e; }
+  background: #dc5575; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #bf1b29; }
+  background: #aa6f6c; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b1ce07; }
+  background: #38f2f4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #29a20b; }
+  background: #62f724; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fa9c8f; }
+  background: #c3237f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #dc2720; }
+  background: #aa49a7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c23ae9; }
+  background: #8d5dc2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #318612; }
+  background: #5014c7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8bce5b; }
+  background: #ff5e4a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fd05ad; }
+  background: #8b4141; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3d27cf; }
+  background: #e0feb5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #fba8ed; }
+  background: #419cdd; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2b2226; }
+  background: #01075c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b34234; }
+  background: #8f28dc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bf37bf; }
+  background: #fffce7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d6cd47; }
+  background: #0be7c8; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1fa90e; }
+  background: #d70531; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #61f562; }
+  background: #429089; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0d87af; }
+  background: #c67d0f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #acde55; }
+  background: #92c3fc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2b01a6; }
+  background: #b036e8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f32124; }
+  background: #96b182; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #40b49e; }
+  background: #e169fe; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a88194; }
+  background: #5c4159; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3be295; }
+  background: #e4278e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #09f307; }
+  background: #1811c7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a70c69; }
+  background: #15371c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c75704; }
+  background: #83a743; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d61059; }
+  background: #ffe1d4; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3a71db; }
+  background: #4380ef; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c84aa8; }
+  background: #c92ed1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7cc208; }
+  background: #759c0a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b753a4; }
+  background: #05b99b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #187d4b; }
+  background: #4d35fa; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a6935e; }
+  background: #5356bf; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #96d919; }
+  background: #ed796e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #56ae14; }
+  background: #a76662; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a65c46; }
+  background: #020859; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b6fecf; }
+  background: #9c39df; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #88d362; }
+  background: #65aecf; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4e3d7c; }
+  background: #f70153; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #aac80f; }
+  background: #5333d1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #91d393; }
+  background: #f7316b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ad07f5; }
+  background: #f48356; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #9cc8db; }
+  background: #83f55d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #205ea1; }
+  background: #1e2d72; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4d1654; }
+  background: #4d8dee; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #622fd5; }
+  background: #e90b3f; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a056e0; }
+  background: #334b3a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b51bcf; }
+  background: #0c1e84; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7faa2e; }
+  background: #b18ac8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #adb3b6; }
+  background: #20a928; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9f35d1; }
+  background: #c4657c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #eed374; }
+  background: #95cb63; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #539fdf; }
+  background: #a5581c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1fc4e6; }
+  background: #9122c5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e6aa2d; }
+  background: #0c1e28; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6aaf8f; }
+  background: #3080f0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #50451e; }
+  background: #beeebb; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c5c43e; }
+  background: #2da693; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c643c0; }
+  background: #882280; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e9bdd0; }
+  background: #6e835e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #72051a; }
+  background: #c8a450; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d8c303; }
+  background: #9fb7d4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9754,7 +9754,7 @@ table .bold-heading {
 .query-wizard-expression-heading {
   font-size: 20px;
   font-family: 'proxima-semi-bold';
-  margin-top: 0px;
+  margin-top: 25px;
   color: #4C4C4C; }
 
 .modal-close-btn {
@@ -10560,6 +10560,16 @@ input[type="checkbox"] {
     overflow: auto !important; } }
 .block {
   display: block; }
+
+h3,
+h3 + a {
+  opacity: 1 !important;
+  -webkit-transition: inherit !important;
+  transition: inherit !important;
+  transition: inherit !important;
+  transition: inherit !important;
+  -webkit-transform: inherit !important;
+  transform: inherit !important; }
 
 .tab-right-column-container input[type="text"] {
   padding-left: 40px; }
