--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3,6 +3,17 @@
     display: block;
 }
 
+h3,
+h3+a {
+    opacity: 1 !important;
+    -webkit-transition: inherit !important;
+    transition: inherit !important;
+    transition: inherit !important;
+    transition: inherit !important;
+    -webkit-transform: inherit !important;
+    transform: inherit !important;
+}
+
 .tab-right-column-container input[type="text"] {
     padding-left: 40px;
 }
